src/test/ui/pattern/usefulness/issue-3601.stderr
error[E0004]: non-exhaustive patterns: `box _` not covered
  --> $DIR/issue-3601.rs:30:44
   |
LL |         box NodeKind::Element(ed) => match ed.kind {
   |                                            ^^^^^^^ pattern `box _` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `Box<ElementKind>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
